# mime

./: CMakeLists.txt  README.md  mime.vix  vix.json
examples/: detect_combined.cpp  from_extension.cpp  from_path.cpp  sniff_bytes.cpp
include/mime/: mime.hpp
tests/: test_basic.cpp
